parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> comandos
Rule 2     comandos -> comando
Rule 3     comandos -> comando comandos
Rule 4     comando -> conectar
Rule 5     comando -> desconectar
Rule 6     comando -> publicar
Rule 7     comando -> suscribirse
Rule 8     comando -> desuscribirse
Rule 9     comando -> habilitar_encriptado
Rule 10    comando -> habilitar_auth
Rule 11    habilitar_encriptado -> ENCRIPTADO A valor_booleano
Rule 12    valor_booleano -> TRUE
Rule 13    valor_booleano -> FALSE
Rule 14    habilitar_auth -> AUTH VALOR VALOR
Rule 15    conectar -> CONECTAR MQTT DISPOSITIVO
Rule 16    desconectar -> DESCONECTAR MQTT DISPOSITIVO
Rule 17    publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR
Rule 18    suscribirse -> SUSCRIBIRSE A TOPIC
Rule 19    desuscribirse -> DESUSCRIBIRSE A TOPIC

Terminals, with rules where they appear

A                    : 11 17 18 19
AUTH                 : 14
CON                  : 17
CONECTAR             : 15
DESCONECTAR          : 16
DESUSCRIBIRSE        : 19
DISPOSITIVO          : 15 16 17
ENCRIPTADO           : 11
FALSE                : 13
KEY                  : 17
MENSAJE              : 17
MQTT                 : 15 16
PUBLICAR             : 17
SUSCRIBIRSE          : 18
TOPIC                : 17 18 19
TRUE                 : 12
VALOR                : 14 14 17
error                : 

Nonterminals, with rules where they appear

comando              : 2 3
comandos             : 1 3
conectar             : 4
desconectar          : 5
desuscribirse        : 8
habilitar_auth       : 10
habilitar_encriptado : 9
programa             : 0
publicar             : 6
suscribirse          : 7
valor_booleano       : 11

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . comandos
    (2) comandos -> . comando
    (3) comandos -> . comando comandos
    (4) comando -> . conectar
    (5) comando -> . desconectar
    (6) comando -> . publicar
    (7) comando -> . suscribirse
    (8) comando -> . desuscribirse
    (9) comando -> . habilitar_encriptado
    (10) comando -> . habilitar_auth
    (15) conectar -> . CONECTAR MQTT DISPOSITIVO
    (16) desconectar -> . DESCONECTAR MQTT DISPOSITIVO
    (17) publicar -> . PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR
    (18) suscribirse -> . SUSCRIBIRSE A TOPIC
    (19) desuscribirse -> . DESUSCRIBIRSE A TOPIC
    (11) habilitar_encriptado -> . ENCRIPTADO A valor_booleano
    (14) habilitar_auth -> . AUTH VALOR VALOR

    CONECTAR        shift and go to state 11
    DESCONECTAR     shift and go to state 12
    PUBLICAR        shift and go to state 13
    SUSCRIBIRSE     shift and go to state 14
    DESUSCRIBIRSE   shift and go to state 15
    ENCRIPTADO      shift and go to state 16
    AUTH            shift and go to state 17

    programa                       shift and go to state 1
    comandos                       shift and go to state 2
    comando                        shift and go to state 3
    conectar                       shift and go to state 4
    desconectar                    shift and go to state 5
    publicar                       shift and go to state 6
    suscribirse                    shift and go to state 7
    desuscribirse                  shift and go to state 8
    habilitar_encriptado           shift and go to state 9
    habilitar_auth                 shift and go to state 10

state 1

    (0) S' -> programa .



state 2

    (1) programa -> comandos .

    $end            reduce using rule 1 (programa -> comandos .)


state 3

    (2) comandos -> comando .
    (3) comandos -> comando . comandos
    (2) comandos -> . comando
    (3) comandos -> . comando comandos
    (4) comando -> . conectar
    (5) comando -> . desconectar
    (6) comando -> . publicar
    (7) comando -> . suscribirse
    (8) comando -> . desuscribirse
    (9) comando -> . habilitar_encriptado
    (10) comando -> . habilitar_auth
    (15) conectar -> . CONECTAR MQTT DISPOSITIVO
    (16) desconectar -> . DESCONECTAR MQTT DISPOSITIVO
    (17) publicar -> . PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR
    (18) suscribirse -> . SUSCRIBIRSE A TOPIC
    (19) desuscribirse -> . DESUSCRIBIRSE A TOPIC
    (11) habilitar_encriptado -> . ENCRIPTADO A valor_booleano
    (14) habilitar_auth -> . AUTH VALOR VALOR

    $end            reduce using rule 2 (comandos -> comando .)
    CONECTAR        shift and go to state 11
    DESCONECTAR     shift and go to state 12
    PUBLICAR        shift and go to state 13
    SUSCRIBIRSE     shift and go to state 14
    DESUSCRIBIRSE   shift and go to state 15
    ENCRIPTADO      shift and go to state 16
    AUTH            shift and go to state 17

    comando                        shift and go to state 3
    comandos                       shift and go to state 18
    conectar                       shift and go to state 4
    desconectar                    shift and go to state 5
    publicar                       shift and go to state 6
    suscribirse                    shift and go to state 7
    desuscribirse                  shift and go to state 8
    habilitar_encriptado           shift and go to state 9
    habilitar_auth                 shift and go to state 10

state 4

    (4) comando -> conectar .

    CONECTAR        reduce using rule 4 (comando -> conectar .)
    DESCONECTAR     reduce using rule 4 (comando -> conectar .)
    PUBLICAR        reduce using rule 4 (comando -> conectar .)
    SUSCRIBIRSE     reduce using rule 4 (comando -> conectar .)
    DESUSCRIBIRSE   reduce using rule 4 (comando -> conectar .)
    ENCRIPTADO      reduce using rule 4 (comando -> conectar .)
    AUTH            reduce using rule 4 (comando -> conectar .)
    $end            reduce using rule 4 (comando -> conectar .)


state 5

    (5) comando -> desconectar .

    CONECTAR        reduce using rule 5 (comando -> desconectar .)
    DESCONECTAR     reduce using rule 5 (comando -> desconectar .)
    PUBLICAR        reduce using rule 5 (comando -> desconectar .)
    SUSCRIBIRSE     reduce using rule 5 (comando -> desconectar .)
    DESUSCRIBIRSE   reduce using rule 5 (comando -> desconectar .)
    ENCRIPTADO      reduce using rule 5 (comando -> desconectar .)
    AUTH            reduce using rule 5 (comando -> desconectar .)
    $end            reduce using rule 5 (comando -> desconectar .)


state 6

    (6) comando -> publicar .

    CONECTAR        reduce using rule 6 (comando -> publicar .)
    DESCONECTAR     reduce using rule 6 (comando -> publicar .)
    PUBLICAR        reduce using rule 6 (comando -> publicar .)
    SUSCRIBIRSE     reduce using rule 6 (comando -> publicar .)
    DESUSCRIBIRSE   reduce using rule 6 (comando -> publicar .)
    ENCRIPTADO      reduce using rule 6 (comando -> publicar .)
    AUTH            reduce using rule 6 (comando -> publicar .)
    $end            reduce using rule 6 (comando -> publicar .)


state 7

    (7) comando -> suscribirse .

    CONECTAR        reduce using rule 7 (comando -> suscribirse .)
    DESCONECTAR     reduce using rule 7 (comando -> suscribirse .)
    PUBLICAR        reduce using rule 7 (comando -> suscribirse .)
    SUSCRIBIRSE     reduce using rule 7 (comando -> suscribirse .)
    DESUSCRIBIRSE   reduce using rule 7 (comando -> suscribirse .)
    ENCRIPTADO      reduce using rule 7 (comando -> suscribirse .)
    AUTH            reduce using rule 7 (comando -> suscribirse .)
    $end            reduce using rule 7 (comando -> suscribirse .)


state 8

    (8) comando -> desuscribirse .

    CONECTAR        reduce using rule 8 (comando -> desuscribirse .)
    DESCONECTAR     reduce using rule 8 (comando -> desuscribirse .)
    PUBLICAR        reduce using rule 8 (comando -> desuscribirse .)
    SUSCRIBIRSE     reduce using rule 8 (comando -> desuscribirse .)
    DESUSCRIBIRSE   reduce using rule 8 (comando -> desuscribirse .)
    ENCRIPTADO      reduce using rule 8 (comando -> desuscribirse .)
    AUTH            reduce using rule 8 (comando -> desuscribirse .)
    $end            reduce using rule 8 (comando -> desuscribirse .)


state 9

    (9) comando -> habilitar_encriptado .

    CONECTAR        reduce using rule 9 (comando -> habilitar_encriptado .)
    DESCONECTAR     reduce using rule 9 (comando -> habilitar_encriptado .)
    PUBLICAR        reduce using rule 9 (comando -> habilitar_encriptado .)
    SUSCRIBIRSE     reduce using rule 9 (comando -> habilitar_encriptado .)
    DESUSCRIBIRSE   reduce using rule 9 (comando -> habilitar_encriptado .)
    ENCRIPTADO      reduce using rule 9 (comando -> habilitar_encriptado .)
    AUTH            reduce using rule 9 (comando -> habilitar_encriptado .)
    $end            reduce using rule 9 (comando -> habilitar_encriptado .)


state 10

    (10) comando -> habilitar_auth .

    CONECTAR        reduce using rule 10 (comando -> habilitar_auth .)
    DESCONECTAR     reduce using rule 10 (comando -> habilitar_auth .)
    PUBLICAR        reduce using rule 10 (comando -> habilitar_auth .)
    SUSCRIBIRSE     reduce using rule 10 (comando -> habilitar_auth .)
    DESUSCRIBIRSE   reduce using rule 10 (comando -> habilitar_auth .)
    ENCRIPTADO      reduce using rule 10 (comando -> habilitar_auth .)
    AUTH            reduce using rule 10 (comando -> habilitar_auth .)
    $end            reduce using rule 10 (comando -> habilitar_auth .)


state 11

    (15) conectar -> CONECTAR . MQTT DISPOSITIVO

    MQTT            shift and go to state 19


state 12

    (16) desconectar -> DESCONECTAR . MQTT DISPOSITIVO

    MQTT            shift and go to state 20


state 13

    (17) publicar -> PUBLICAR . DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR

    DISPOSITIVO     shift and go to state 21


state 14

    (18) suscribirse -> SUSCRIBIRSE . A TOPIC

    A               shift and go to state 22


state 15

    (19) desuscribirse -> DESUSCRIBIRSE . A TOPIC

    A               shift and go to state 23


state 16

    (11) habilitar_encriptado -> ENCRIPTADO . A valor_booleano

    A               shift and go to state 24


state 17

    (14) habilitar_auth -> AUTH . VALOR VALOR

    VALOR           shift and go to state 25


state 18

    (3) comandos -> comando comandos .

    $end            reduce using rule 3 (comandos -> comando comandos .)


state 19

    (15) conectar -> CONECTAR MQTT . DISPOSITIVO

    DISPOSITIVO     shift and go to state 26


state 20

    (16) desconectar -> DESCONECTAR MQTT . DISPOSITIVO

    DISPOSITIVO     shift and go to state 27


state 21

    (17) publicar -> PUBLICAR DISPOSITIVO . MENSAJE A TOPIC CON KEY VALOR

    MENSAJE         shift and go to state 28


state 22

    (18) suscribirse -> SUSCRIBIRSE A . TOPIC

    TOPIC           shift and go to state 29


state 23

    (19) desuscribirse -> DESUSCRIBIRSE A . TOPIC

    TOPIC           shift and go to state 30


state 24

    (11) habilitar_encriptado -> ENCRIPTADO A . valor_booleano
    (12) valor_booleano -> . TRUE
    (13) valor_booleano -> . FALSE

    TRUE            shift and go to state 32
    FALSE           shift and go to state 33

    valor_booleano                 shift and go to state 31

state 25

    (14) habilitar_auth -> AUTH VALOR . VALOR

    VALOR           shift and go to state 34


state 26

    (15) conectar -> CONECTAR MQTT DISPOSITIVO .

    CONECTAR        reduce using rule 15 (conectar -> CONECTAR MQTT DISPOSITIVO .)
    DESCONECTAR     reduce using rule 15 (conectar -> CONECTAR MQTT DISPOSITIVO .)
    PUBLICAR        reduce using rule 15 (conectar -> CONECTAR MQTT DISPOSITIVO .)
    SUSCRIBIRSE     reduce using rule 15 (conectar -> CONECTAR MQTT DISPOSITIVO .)
    DESUSCRIBIRSE   reduce using rule 15 (conectar -> CONECTAR MQTT DISPOSITIVO .)
    ENCRIPTADO      reduce using rule 15 (conectar -> CONECTAR MQTT DISPOSITIVO .)
    AUTH            reduce using rule 15 (conectar -> CONECTAR MQTT DISPOSITIVO .)
    $end            reduce using rule 15 (conectar -> CONECTAR MQTT DISPOSITIVO .)


state 27

    (16) desconectar -> DESCONECTAR MQTT DISPOSITIVO .

    CONECTAR        reduce using rule 16 (desconectar -> DESCONECTAR MQTT DISPOSITIVO .)
    DESCONECTAR     reduce using rule 16 (desconectar -> DESCONECTAR MQTT DISPOSITIVO .)
    PUBLICAR        reduce using rule 16 (desconectar -> DESCONECTAR MQTT DISPOSITIVO .)
    SUSCRIBIRSE     reduce using rule 16 (desconectar -> DESCONECTAR MQTT DISPOSITIVO .)
    DESUSCRIBIRSE   reduce using rule 16 (desconectar -> DESCONECTAR MQTT DISPOSITIVO .)
    ENCRIPTADO      reduce using rule 16 (desconectar -> DESCONECTAR MQTT DISPOSITIVO .)
    AUTH            reduce using rule 16 (desconectar -> DESCONECTAR MQTT DISPOSITIVO .)
    $end            reduce using rule 16 (desconectar -> DESCONECTAR MQTT DISPOSITIVO .)


state 28

    (17) publicar -> PUBLICAR DISPOSITIVO MENSAJE . A TOPIC CON KEY VALOR

    A               shift and go to state 35


state 29

    (18) suscribirse -> SUSCRIBIRSE A TOPIC .

    CONECTAR        reduce using rule 18 (suscribirse -> SUSCRIBIRSE A TOPIC .)
    DESCONECTAR     reduce using rule 18 (suscribirse -> SUSCRIBIRSE A TOPIC .)
    PUBLICAR        reduce using rule 18 (suscribirse -> SUSCRIBIRSE A TOPIC .)
    SUSCRIBIRSE     reduce using rule 18 (suscribirse -> SUSCRIBIRSE A TOPIC .)
    DESUSCRIBIRSE   reduce using rule 18 (suscribirse -> SUSCRIBIRSE A TOPIC .)
    ENCRIPTADO      reduce using rule 18 (suscribirse -> SUSCRIBIRSE A TOPIC .)
    AUTH            reduce using rule 18 (suscribirse -> SUSCRIBIRSE A TOPIC .)
    $end            reduce using rule 18 (suscribirse -> SUSCRIBIRSE A TOPIC .)


state 30

    (19) desuscribirse -> DESUSCRIBIRSE A TOPIC .

    CONECTAR        reduce using rule 19 (desuscribirse -> DESUSCRIBIRSE A TOPIC .)
    DESCONECTAR     reduce using rule 19 (desuscribirse -> DESUSCRIBIRSE A TOPIC .)
    PUBLICAR        reduce using rule 19 (desuscribirse -> DESUSCRIBIRSE A TOPIC .)
    SUSCRIBIRSE     reduce using rule 19 (desuscribirse -> DESUSCRIBIRSE A TOPIC .)
    DESUSCRIBIRSE   reduce using rule 19 (desuscribirse -> DESUSCRIBIRSE A TOPIC .)
    ENCRIPTADO      reduce using rule 19 (desuscribirse -> DESUSCRIBIRSE A TOPIC .)
    AUTH            reduce using rule 19 (desuscribirse -> DESUSCRIBIRSE A TOPIC .)
    $end            reduce using rule 19 (desuscribirse -> DESUSCRIBIRSE A TOPIC .)


state 31

    (11) habilitar_encriptado -> ENCRIPTADO A valor_booleano .

    CONECTAR        reduce using rule 11 (habilitar_encriptado -> ENCRIPTADO A valor_booleano .)
    DESCONECTAR     reduce using rule 11 (habilitar_encriptado -> ENCRIPTADO A valor_booleano .)
    PUBLICAR        reduce using rule 11 (habilitar_encriptado -> ENCRIPTADO A valor_booleano .)
    SUSCRIBIRSE     reduce using rule 11 (habilitar_encriptado -> ENCRIPTADO A valor_booleano .)
    DESUSCRIBIRSE   reduce using rule 11 (habilitar_encriptado -> ENCRIPTADO A valor_booleano .)
    ENCRIPTADO      reduce using rule 11 (habilitar_encriptado -> ENCRIPTADO A valor_booleano .)
    AUTH            reduce using rule 11 (habilitar_encriptado -> ENCRIPTADO A valor_booleano .)
    $end            reduce using rule 11 (habilitar_encriptado -> ENCRIPTADO A valor_booleano .)


state 32

    (12) valor_booleano -> TRUE .

    CONECTAR        reduce using rule 12 (valor_booleano -> TRUE .)
    DESCONECTAR     reduce using rule 12 (valor_booleano -> TRUE .)
    PUBLICAR        reduce using rule 12 (valor_booleano -> TRUE .)
    SUSCRIBIRSE     reduce using rule 12 (valor_booleano -> TRUE .)
    DESUSCRIBIRSE   reduce using rule 12 (valor_booleano -> TRUE .)
    ENCRIPTADO      reduce using rule 12 (valor_booleano -> TRUE .)
    AUTH            reduce using rule 12 (valor_booleano -> TRUE .)
    $end            reduce using rule 12 (valor_booleano -> TRUE .)


state 33

    (13) valor_booleano -> FALSE .

    CONECTAR        reduce using rule 13 (valor_booleano -> FALSE .)
    DESCONECTAR     reduce using rule 13 (valor_booleano -> FALSE .)
    PUBLICAR        reduce using rule 13 (valor_booleano -> FALSE .)
    SUSCRIBIRSE     reduce using rule 13 (valor_booleano -> FALSE .)
    DESUSCRIBIRSE   reduce using rule 13 (valor_booleano -> FALSE .)
    ENCRIPTADO      reduce using rule 13 (valor_booleano -> FALSE .)
    AUTH            reduce using rule 13 (valor_booleano -> FALSE .)
    $end            reduce using rule 13 (valor_booleano -> FALSE .)


state 34

    (14) habilitar_auth -> AUTH VALOR VALOR .

    CONECTAR        reduce using rule 14 (habilitar_auth -> AUTH VALOR VALOR .)
    DESCONECTAR     reduce using rule 14 (habilitar_auth -> AUTH VALOR VALOR .)
    PUBLICAR        reduce using rule 14 (habilitar_auth -> AUTH VALOR VALOR .)
    SUSCRIBIRSE     reduce using rule 14 (habilitar_auth -> AUTH VALOR VALOR .)
    DESUSCRIBIRSE   reduce using rule 14 (habilitar_auth -> AUTH VALOR VALOR .)
    ENCRIPTADO      reduce using rule 14 (habilitar_auth -> AUTH VALOR VALOR .)
    AUTH            reduce using rule 14 (habilitar_auth -> AUTH VALOR VALOR .)
    $end            reduce using rule 14 (habilitar_auth -> AUTH VALOR VALOR .)


state 35

    (17) publicar -> PUBLICAR DISPOSITIVO MENSAJE A . TOPIC CON KEY VALOR

    TOPIC           shift and go to state 36


state 36

    (17) publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC . CON KEY VALOR

    CON             shift and go to state 37


state 37

    (17) publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON . KEY VALOR

    KEY             shift and go to state 38


state 38

    (17) publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY . VALOR

    VALOR           shift and go to state 39


state 39

    (17) publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR .

    CONECTAR        reduce using rule 17 (publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR .)
    DESCONECTAR     reduce using rule 17 (publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR .)
    PUBLICAR        reduce using rule 17 (publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR .)
    SUSCRIBIRSE     reduce using rule 17 (publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR .)
    DESUSCRIBIRSE   reduce using rule 17 (publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR .)
    ENCRIPTADO      reduce using rule 17 (publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR .)
    AUTH            reduce using rule 17 (publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR .)
    $end            reduce using rule 17 (publicar -> PUBLICAR DISPOSITIVO MENSAJE A TOPIC CON KEY VALOR .)

